# Jaculus-machine

./: .clang-tidy  .gitignore  404.html  CMakeLists.txt  README.md  index.html  lint.sh  mkdocs.yml  parserNotes.md  sitemap.xml
.github/workflows/: cmake.yml
docs/: CNAME  getting-started.md  index.md  pitfalls.md
docs/reference/: atom.md  classes.md  context.md  event-loop.md  exceptions.md  features.md  functions.md  mfeatures.md  plugins.md  values.md
doxygen/annotated/: index.html
doxygen/atom_8h/: index.html
doxygen/atom_8h_source/: index.html
doxygen/basicStreamFeature_8h/: index.html
doxygen/basicStreamFeature_8h_source/: index.html
doxygen/class_8h/: index.html
doxygen/class_8h_source/: index.html
doxygen/class_member_enums/: index.html
doxygen/class_member_functions/: index.html
doxygen/class_member_typedefs/: index.html
doxygen/class_member_variables/: index.html
doxygen/class_members/: index.html
doxygen/classes/: index.html
doxygen/classjac_1_1ArrayBufferWrapper/: index.html
doxygen/classjac_1_1ArrayWrapper/: index.html
doxygen/classjac_1_1Atom/: index.html
doxygen/classjac_1_1BasicStreamFeature/: index.html
doxygen/classjac_1_1Class/: index.html
doxygen/classjac_1_1ContextRef/: index.html
doxygen/classjac_1_1EventLoopFeature/: index.html
doxygen/classjac_1_1EventLoopTerminal/: index.html
doxygen/classjac_1_1EventQueueFeature/: index.html
doxygen/classjac_1_1ExceptionWrapper/: index.html
doxygen/classjac_1_1File/: index.html
doxygen/classjac_1_1FilesystemFeature/: index.html
doxygen/classjac_1_1FilesystemFeature_1_1Fs/: index.html
doxygen/classjac_1_1FilesystemFeature_1_1Path/: index.html
doxygen/classjac_1_1FunctionFactory/: index.html
doxygen/classjac_1_1FunctionWrapper/: index.html
doxygen/classjac_1_1MachineBase/: index.html
doxygen/classjac_1_1Module/: index.html
doxygen/classjac_1_1ModuleLoaderFeature/: index.html
doxygen/classjac_1_1ObjectWrapper/: index.html
doxygen/classjac_1_1OsWritable/: index.html
doxygen/classjac_1_1Plugin/: index.html
doxygen/classjac_1_1PluginHandle/: index.html
doxygen/classjac_1_1PluginHolderFeature/: index.html
doxygen/classjac_1_1PluginManager/: index.html
doxygen/classjac_1_1PromiseWrapper/: index.html
doxygen/classjac_1_1Readable/: index.html
doxygen/classjac_1_1ReadableRef/: index.html
doxygen/classjac_1_1StdioFeature/: index.html
doxygen/classjac_1_1StdioFeature_1_1Stdio/: index.html
doxygen/classjac_1_1StringView/: index.html
doxygen/classjac_1_1TimersFeature/: index.html
doxygen/classjac_1_1TimersFeature_1_1CompareTimer/: index.html
doxygen/classjac_1_1TimersFeature_1_1Timer/: index.html
doxygen/classjac_1_1ValueWrapper/: index.html
doxygen/classjac_1_1Writable/: index.html
doxygen/classjac_1_1WritableRef/: index.html
doxygen/classnoal_1_1callableany/: index.html
doxygen/classnoal_1_1callableany_3_01Func_00_01Res_07Args_8_8_8_08_4/: index.html
doxygen/classnoal_1_1funcptr/: index.html
doxygen/classnoal_1_1function/: index.html
doxygen/classnoal_1_1function_3_01Res_07Args_8_8_8_08_00_01dataSize_01_4/: index.html
doxygen/classnoal_1_1memberconstfuncptr/: index.html
doxygen/classnoal_1_1memberfuncptr/: index.html
doxygen/context_8cpp/: index.html
doxygen/context_8cpp_source/: index.html
doxygen/context_8h/: index.html
doxygen/context_8h_source/: index.html
doxygen/declarations_8h/: index.html
doxygen/declarations_8h_source/: index.html
doxygen/dir_10e7d6e7bc593e38e57ffe1bab5ed259/: index.html
doxygen/dir_256037ad7d0c306238e2bc4f945d341d/: index.html
doxygen/dir_68267d1309a1af8e8297ef4c3efbcdba/: index.html
doxygen/dir_6f95e06b732314161804ab1ef73c9681/: index.html
doxygen/dir_7e10f281dae724a55a0e1ba0acd02229/: index.html
doxygen/dir_8745a1fa89e3088deda48338e7669502/: index.html
doxygen/dir_f815192ecbd68c2ad40e839ff65387cf/: index.html
doxygen/file_8h/: index.html
getting-started/: index.html
pitfalls/: index.html
search/: search_index.json
src/: CMakeLists.txt  Kconfig  idf_component.yml  noal_func.h  qbe.CMakeLists.txt  qbeUtil.h  quickjs.CMakeLists.txt
src/jac/: util.h
src/jac/features/: aotEvalFeature.h  asyncEventLoopFeature.h  asyncTimersFeature.h  basicStreamFeature.h  evalFeature.h  eventLoopFeature.h  eventLoopTerminal.h  eventQueueFeature.h  filesystemFeature.h  moduleLoaderFeature.h  replFeature.h  stdioFeature.h  timersFeature.h  yieldFeature.h
src/jac/features/types/: file.h  streams.h
src/jac/features/util/: ostreamjs.h
src/jac/machine/: atom.h  class.h  context.cpp  context.h  funcUtil.h  functionFactory.h  machine.cpp  machine.h  plugins.h  stringView.h  traits.h  values.h
src/jac/machine/compiler/: assembler.h  ast.cpp  ast.h  astPrint.h  cfg.cpp  cfg.h  cfgCwerg.h  cfgDot.h  cfgEmit.cpp  cfgEmit.h  cfgMir.cpp  cfgMir.h  cfgSimplify.h  emit.h  grammar.h  language.h  mirBuiltins.h  mirUtil.cpp  mirUtil.h  opcode.h  quickjsOps.h  scanner.h  stackAllocator.h  tacEmit.h  tacMir.h  tacTree.h  traverseFuncs.h
src/jac/machine/internal/: declarations.h
src/jac/machine/parser/: grammar.h  language.h  scanner.h
tests/: CMakeLists.txt  aotEval.cpp  asScanner.cpp  bench.cpp  cfgInterp.cpp  class.cpp  compile.cpp  compileTool.cpp  eval.cpp  filesystem.cpp  functionFactory.cpp  machineBase.cpp  main.cpp  mainCompFn.cpp  main_.cpp  moduleLoader.cpp  parser.cpp  plugins.cpp  regression.cpp  scanner.cpp  util.h  values.cpp
tests/compiler/: cfgInterpreter.h  compileInterpEvalFeature.h  types.h
tests/test_files/fs/: test.js
tests/test_files/moduleLoader/: test.js  throw.js
tests/test_files/moduleLoader/importException/: main.js  neighbor.js
tests/test_files/moduleLoader/importNeighbor/: main.js  neighbor.js
tests/test_files/moduleLoader/importNotFound/: main.js
tests/test_files/moduleLoader/importSubdir/: main.js
tests/test_files/moduleLoader/importSubdir/dir/: subdir.js
tests/test_files/moduleLoader/importSubdirUp/: up.js
tests/test_files/moduleLoader/importSubdirUp/dir/: subdir.js
tests/test_files/regression/importPromise/: imported.js  main.js
(+349 files in other folders)
